fix draggable size on firefox

--- a/styles/_shared.scss
+++ b/styles/_shared.scss
@@ -299,3 +299,16 @@ body.pf2e-hud-fadeout {
         }
     }
 }
+
+.pf2e-hud-draggable {
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    left: -10000px;
+    border-radius: 4px;
+
+    img {
+        width: 100%;
+        height: 100%;
+    }
+}
